# raytracing_challenge

./: .gitignore  CMakeLists.txt  README.md
include/: canvas.h  color.h  data_types.h  matrix_transforms.h  matrix_utils.h  raytracing_helpers.h  utils.h
src/: CMakeLists.txt  canvas.cpp  data_types.cpp  matrix_transforms.cpp  raysphereapp.cpp  raytracing_helpers.cpp
test/: CMakeLists.txt  TestCanvas.cpp  TestColorData.cpp  TestHit.cpp  TestLightningAndShading.cpp  TestMatrices.cpp  TestRay.cpp  TestSphere.cpp  TestSurfaceNormal.cpp  TestTransformRaySphere.cpp
